--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </li>
           </ul>
-          <a href="mailto:you@email.com" class="email-icon">
+          <a href="mailto:info@krunalmedservice.com" class="email-icon">
             <img
               src="https://github.com/bradtraversy/creative-agency-website/blob/master/images/email.png?raw=true"
               alt=""
@@ -353,7 +353,7 @@ We understand how patients find providers and practices and what strategies to l
             />
             <div class="details">
               <h4>Email</h4>
-              <a href="mailto:anyone@example.com">anyone@example.com</a>
+              <a href="mailto:info@krunalmedservice.com">info@krunalmedservice.com</a>
             </div>
           </div>
           <div class="info-box">
